--- a/templates/default/sv-apiaxle-api-run.erb
+++ b/templates/default/sv-apiaxle-api-run.erb
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+export NODE_ENV=<%= node[:apiaxle][:environment] %>
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user] %> apiaxle-api \
   -h <%= node[:apiaxle][:api][:host] %> \
