--- a/templates/default/sv-apiaxle-proxy-run.erb
+++ b/templates/default/sv-apiaxle-proxy-run.erb
@@ -1,5 +1,6 @@
 #!/bin/bash
-
+#
+export NODE_ENV=<%= node[:apiaxle][:environment] %>
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user] %> apiaxle-proxy \
   -h <%= node[:apiaxle][:proxy][:host] %> \
