--- a/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
+++ b/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
@@ -1,6 +1,5 @@
 #!/bin/bash
 
-export NODE_ENV=<%= node[:apiaxle][:environment] %>
 exec 2>&1
-exec chpst -u <%= node[:apiaxle][:user] %> apiaxle-proxy-event-subscriber \
+exec chpst -u <%= node[:apiaxle][:user][:name] %> apiaxle-proxy-event-subscriber \
   -f <%= node[:apiaxle][:proxy_event_subscriber][:process_forks] %>
