--- a/templates/default/sv-apiaxle-api-run.erb
+++ b/templates/default/sv-apiaxle-api-run.erb
@@ -2,6 +2,7 @@
 
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user][:name] %> apiaxle-api \
+  -e <%= node[:runit][:sv_dir] %>/apiaxle-api/env \
   -h <%= node[:apiaxle][:api][:host] %> \
   -p <%= node[:apiaxle][:api][:port] %> \
   -f <%= node[:apiaxle][:api][:process_forks] %>
