--- a/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
+++ b/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
@@ -2,4 +2,5 @@
 
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user][:name] %> apiaxle-proxy-event-subscriber \
+  -e <%= node[:runit][:sv_dir] %>/apiaxle-proxy-event-subscriber/env \
   -f <%= node[:apiaxle][:proxy_event_subscriber][:process_forks] %>
