--- a/templates/default/sv-apiaxle-proxy-run.erb
+++ b/templates/default/sv-apiaxle-proxy-run.erb
@@ -2,6 +2,7 @@
 #
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user][:name] %> apiaxle-proxy \
+  -e <%= node[:runit][:sv_dir] %>/apiaxle-proxy/env \
   -h <%= node[:apiaxle][:proxy][:host] %> \
   -f <%= node[:apiaxle][:proxy][:process_forks] %> \
   -p <%= node[:apiaxle][:proxy][:port] %> \
