variablalize some more things dont start services by definition, let them subscribe to the template to avoid multiple restarts on first boot

--- a/templates/default/apiaxle.json.erb
+++ b/templates/default/apiaxle.json.erb
@@ -7,7 +7,7 @@
     "debug": true
   },
   "logging": {
-    "level": "DEBUG",
+    "level": "<%= @log_level %>",
     "appenders": [{
       "type": "stdout"
     }]
