--- a/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
+++ b/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 
 exec 2>&1
-exec chpst -u <%= node[:apiaxle][:user][:name] %> apiaxle-proxy-event-subscriber \
-  -e <%= node[:runit][:sv_dir] %>/apiaxle-proxy-event-subscriber/env \
+exec chpst -u <%= node[:apiaxle][:user][:name] %> -e <%= node[:runit][:sv_dir] %>/apiaxle-proxy-event-subscriber/env \
+apiaxle-proxy-event-subscriber \
   -f <%= node[:apiaxle][:proxy_event_subscriber][:process_forks] %>
