--- a/templates/default/apiaxle.json.erb
+++ b/templates/default/apiaxle.json.erb
@@ -9,7 +9,7 @@
   "logging": {
     "level": "<%= @log_level %>",
     "appenders": [{
-      "type": "stdout"
+      "type": "console"
     }]
   }
 }
