--- a/templates/default/apiaxle-admin.conf.erb
+++ b/templates/default/apiaxle-admin.conf.erb
@@ -1,12 +1,13 @@
 server {
-  listen 80 default_server;
-  listen [::]:80 default_server ipv6only=on;
+  listen <%= @listen_port %> default_server;
+  listen [::]:<%= @listen_port %> default_server ipv6only=on;
   root <%= @install_dir %>;
   index index.html index.htm;
   server_name localhost;
+  allow 127.0.0.1;
   allow 10.0.0.0/8;
   deny all;
   location /v1 {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://localhost:<%= @proxypass_port %>;
   }
 }
