--- a/templates/default/apiaxle-admin.conf.erb
+++ b/templates/default/apiaxle-admin.conf.erb
@@ -1,7 +1,7 @@
 server {
   listen <%= @listen_port %> default_server;
   listen [::]:<%= @listen_port %> default_server ipv6only=on;
-  root <%= @install_dir %>/app;
+  root <%= @install_dir %>/;
   index index.html index.htm;
   server_name localhost;
   <%- @allowed_ips.each do |ip| -%>
