this is most likely wrong, but http://localhost:8000 will now run the releases/v1/ instance of the app

--- a/templates/default/apiaxle-admin.conf.erb
+++ b/templates/default/apiaxle-admin.conf.erb
@@ -8,6 +8,11 @@ server {
   allow <%= ip %>;
   <%- end %>
   deny all;
+
+  location / {
+    alias <%= @install_dir %>/releases/<%= @release_version %>/;
+  }
+
   location /v1 {
     proxy_pass http://<%= @api_host %>:<%= @api_port %>;
   }
