--- a/templates/default/proxied-api.conf.erb
+++ b/templates/default/proxied-api.conf.erb
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name <%= @api_name %>.mapzen.com;
+  server_name <%= @domain %>;
 
   location / {
     proxy_pass http://cluster;
