--- a/templates/default/proxied-api.conf.erb
+++ b/templates/default/proxied-api.conf.erb
@@ -4,6 +4,9 @@ server {
 
   location / {
     proxy_pass http://cluster;
+    <% if @forwarded_for %>
+    proxy_set_header X-Forwarded-For <%= @forwarded_for %>;
+    <% end %>
     proxy_set_header Host "<%= @api_name %>.api.localhost";
   }
 }
