move traffic processor config to apiaxle's json config file

--- a/templates/default/apiaxle.json.erb
+++ b/templates/default/apiaxle.json.erb
@@ -11,5 +11,11 @@
     "appenders": [{
       "type": "console"
     }]
-  }
+  },
+  "traffic_processors": <%= node[:apiaxle][:traffic_processors].map do |p|
+    {
+      path: p['require_path'],
+      args: p['args']
+    }
+  end.to_json %>
 }
