--- a/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
+++ b/templates/default/sv-apiaxle-proxy-event-subscriber-run.erb
@@ -3,7 +3,4 @@
 exec 2>&1
 exec chpst -u <%= node[:apiaxle][:user][:name] %> -e <%= node[:runit][:sv_dir] %>/apiaxle-proxy-event-subscriber/env \
 apiaxle-proxy-event-subscriber \
-  -f <%= node[:apiaxle][:proxy_event_subscriber][:process_forks] %>\
-  <%= node[:apiaxle][:proxy_event_subscriber][:traffic_processors].map do |p|
-    " -e /usr/local/lib/node_modules/#{p.name}"
-  end.join() %>
+  -f <%= node[:apiaxle][:proxy_event_subscriber][:process_forks] %>
