rename traffic processors to hit processors

--- a/templates/default/apiaxle.json.erb
+++ b/templates/default/apiaxle.json.erb
@@ -12,7 +12,7 @@
       "type": "console"
     }]
   },
-  "traffic_processors": <%= node[:apiaxle][:traffic_processors].map do |p|
+  "hit_processors": <%= node[:apiaxle][:hit_processors].map do |p|
     {
       path: p['require_path'],
       args: p['args']
